--- a/tarea-galeria-img/index.html
+++ b/tarea-galeria-img/index.html
@@ -1,11 +1,59 @@
 <!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+<html lang="es">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
-</head>
-<body>
-    
-</body>
+    <link rel="stylesheet" href="styles/styles.css" />
+  </head>
+
+  <body>
+    <header class="titulo">
+      <h1>Galería de Alicante</h1>
+      <img src="img/palmera-vector.svg" alt="palmera" class="palmera" />
+      <img src="img/hotel-gransol.png" alt="hotel-gransol" class="hotel-gransol" />
+    </header>
+
+    <div class="gallery">
+      <div class="gallery-item">
+        <a href="img/castillo-stbarbara.jpg" target="_blank">
+          <img src="img/castillo-stbarbara.jpg" alt="castillo santa barbara" />
+        </a>
+      </div>
+      <div class="gallery-item">
+        <a href="img/hoja-palmera.jpg" target="_blank">
+          <img src="img/hoja-palmera.jpg" alt="hoja palmera" />
+        </a>
+      </div>
+      <div class="gallery-item">
+        <a href="img/paseo-madera.jpg" target="_blank">
+          <img src="img/paseo-madera.jpg" alt="paseo madera" />
+        </a>
+      </div>
+      <div class="gallery-item">
+        <a href="img/_MG_8984.jpg" target="_blank">
+          <img src="img/_MG_8984.jpg" alt="barcos" />
+        </a>
+      </div>
+      <div class="gallery-item">
+        <a
+          href="img/andreas-strandman-nfG4rbqeFyc-unsplash.jpg"
+          target="_blank"
+        >
+          <img src="img/andreas-strandman-nfG4rbqeFyc-unsplash.jpg" />
+        </a>
+      </div>
+      <div class="gallery-item">
+        <a href="img/ariadne-lee.jpg" target="_blank">
+          <img src="img/ariadne-lee.jpg" alt="mar y montañas" />
+        </a>
+      </div>
+    </div>
+
+    <img
+      src="img/playa-castillo-paella.gif"
+      alt="playa-castillo-paella"
+      class="gif-playa-castillo-paella"
+    />
+  </body>
 </html>
