Añado enlace de la tarea al index.html del repositorio

--- a/index.html
+++ b/index.html
@@ -9,5 +9,6 @@
     <h1>Tareas TPED I</h1>
     <ul>
       <li><a href="juliatrivino-pagina-hackers/index.html">Tarea hackers ElPaís</a></li>
+      <li><a href="tarea-galeria-img/index.html">Tarea galería de imágenes</a></li>
     </ul>
   </body>
