Subo tarea posicionamiento

--- a/tarea-galeria-img/index.html
+++ b/tarea-galeria-img/index.html
@@ -3,57 +3,70 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
+    <title>Galería de Alicante</title>
     <link rel="stylesheet" href="styles/styles.css" />
   </head>
 
   <body>
     <header class="titulo">
-      <h1>Galería de Alicante</h1>
-      <img src="img/palmera-vector.svg" alt="palmera" class="palmera" />
-      <img src="img/hotel-gransol.png" alt="hotel-gransol" class="hotel-gransol" />
+      <h1>Galería de Alicante.</h1>
     </header>
 
     <div class="gallery">
       <div class="gallery-item">
-        <a href="img/castillo-stbarbara.jpg" target="_blank">
-          <img src="img/castillo-stbarbara.jpg" alt="castillo santa barbara" />
+        <a href="img/ariadne-lee.jpg" target="_blank">
+          <img src="img/ariadne-lee.jpg" alt="mar y montañas" />
         </a>
+          <div class="overlay">
+            <div class="text">Puig Campana</div>
+          </div>
       </div>
       <div class="gallery-item">
         <a href="img/hoja-palmera.jpg" target="_blank">
           <img src="img/hoja-palmera.jpg" alt="hoja palmera" />
-        </a>
+       </a>
+          <div class="overlay">
+            <div class="text">Tabarca</div>
+          </div>
       </div>
       <div class="gallery-item">
         <a href="img/paseo-madera.jpg" target="_blank">
           <img src="img/paseo-madera.jpg" alt="paseo madera" />
+        </a>
+          <div class="overlay">
+            <div class="text">Santa Pola</div>
+          </div>
+      </div>
+      <div class="gallery-item full-width">
+        <a href="img/water-22.gif" target="_blank">
+          <img src="img/water-22.gif" alt="gif agua" />
         </a>
       </div>
       <div class="gallery-item">
         <a href="img/_MG_8984.jpg" target="_blank">
           <img src="img/_MG_8984.jpg" alt="barcos" />
         </a>
+        <div class="overlay">
+            <div class="text">Puerto</div>
+        </div>
       </div>
       <div class="gallery-item">
         <a
-          href="img/andreas-strandman-nfG4rbqeFyc-unsplash.jpg"
-          target="_blank"
-        >
+          href="img/andreas-strandman-nfG4rbqeFyc-unsplash.jpg" target="_blank">
           <img src="img/andreas-strandman-nfG4rbqeFyc-unsplash.jpg" />
         </a>
+        <div class="overlay">
+            <div class="text">Peñón de Ifach</div>
+        </div>
       </div>
       <div class="gallery-item">
-        <a href="img/ariadne-lee.jpg" target="_blank">
-          <img src="img/ariadne-lee.jpg" alt="mar y montañas" />
+        <a href="img/castillo-stbarbara.jpg" target="_blank">
+          <img src="img/castillo-stbarbara.jpg" alt="castillo-stbarbara" />
         </a>
+         <div class="overlay">
+            <div class="text">Castillo de Santa Barbara</div>
+         </div>
       </div>
     </div>
-
-    <img
-      src="img/playa-castillo-paella.gif"
-      alt="playa-castillo-paella"
-      class="gif-playa-castillo-paella"
-    />
   </body>
 </html>
