meto enlace en el index.html

--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
       <li><a href="juliatrivino-pagina-hackers/index.html">Tarea hackers ElPaís</a></li>
       <li><a href="tarea-galeria-img/index.html">Tarea galería de imágenes</a></li>
       <li><a href="juliatrivino-paginaresponsive/index.html">Tarea web responsive</a></li>
+      <li><a href="juliatrivino-webpersonal-final/index.html">Tarea web personal</a></li>
     </ul>
   </body>
 </html>
